<resources>
    <string name="app_name">AppMapNavi</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_shop_list">ShopListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_navigation">Navigation</string>
    <string name="action_commit_note">Commit Note</string>
    <string name="text_shop_name">Shop Name</string>
    <string name="title_function">Function</string>
    <string name="title_info">Info</string>
    <string name="title_refresh">Refresh</string>
    <string name="text_car_name">Car Name</string>
    <string name="text_route_name">Route Name</string>
    <string name="title_activity_shop_detail">Shop Detail</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_actual_price">Actual Price</string>
    <string name="text_bookkeeping">Bookkeeping</string>
</resources>
