<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="su.delivergoods.MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="29dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="121dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="183dp" />

</LinearLayout>